# polars-credit

./: 404.html  Cargo.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml
api-reference/impute/: index.html
api-reference/woe/: index.html
docs/api-reference/: impute.md  woe.md
polarscore/: base.py  bin.py  feature_selection.py  iv.py  woe.py
polarscore/test/: test_bin.py  test_feature_selection.py
python/polars_credit/: __init__.py  bin.py  eda.py  feature_selection.py  metrics.py  miv.py  scorecard.py  transformer.py  woe.py
python/polars_credit/util/: divergence.py  expr.py  polars.py
python/polarscore/: __init__.py  base.py  eda.py  feature_selection.py  impute.py  util.py  woe.py
search/: search_index.json
test/: test_metrics.py
test/util/: test_polars.py
